--- a/templates/index.html
+++ b/templates/index.html
@@ -5,31 +5,46 @@
 {% load staticfiles %}
 
 <link rel="stylesheet" type="text/css" href="{% static "grocery.css" %}"/>
+<link rel="stylesheet" type="text/css" href="{% static "jquery-ui.min.css" %}"/>
 <script src="{% static "grocery.js" %}" type="text/javascript" charset="utf-8"></script>
 <script src="{% static "jquery-2.1.1.min.js" %}"></script>
 <script src="{% static "jquery.cookie.js" %}"></script>
 <script src="{% static "jquery.djangocsrf.js" %}"></script>
+<script src="{% static "jquery-ui.min.js" %}"></script>
 <title>Grocery List</title>
 
 <body>
 <div class="content">
     <div class="header">
-        <div class="check">Done</div>
-        <div class="name">What</div>
-        <div class="due"><input id="add_btn" type="button" value="Add" onclick="add_new_item()"></div>
-    </div>
-    <div class="menu">
+        <div class="check title">Done</div>
+        <div class="name title">What</div>
+        <div class="due title">
+            <div id="add_btn" class="button">
+                <img src="/static/img/add.png" width="28" height="28" onclick="add_new_item()" title="Add item">
+            </div>
+            {#            <input id="add_btn" type="button" value="Add" onclick="add_new_item()"></div>#}
+        </div>
+        <div class="menu">
 
+        </div>
+        <div id="list">
+        </div>
+        <div id="empty">
+            No items
+        </div>
+        <div id="add" style="display: none;">
+            <input id="new_list_item" type="text">
+
+            <div id="new_list_add" class="button">
+                <img src="/static/img/accept.png" width="25" height="28" onclick="save_new_item()" title="Save">
+            </div>
+            <div id="new_list_cancel" class="button">
+                <img src="/static/img/cancel.png" width="25" height="28" onclick="cancel_new_item()" title="Cancel">
+            </div>
+        </div>
     </div>
-    <div id="list">
-    </div>
-    <div id="add" style="display: none">
-        <input id="new_list_item" type="text">
-        <input id="new_list_add" type="button" value="Save" onclick="save_new_item()">
-    </div>
-</div>
-<script lang="text/javascript">
-    init();
-    load_grocery_list()
-</script>
+    <script lang="text/javascript">
+        init();
+        load_grocery_list()
+    </script>
 </body>
