Added labels for inputs (html)

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,9 @@
         No items
     </div>
     <div id="add" style="display: none;">
+        Name
         <input id="new_list_item" type="text" placeholder="Name">
+        Due date
         <input id="new_item_due" type="text" placeholder="Due date">
 
         <div id="new_list_add" class="button">
